cabal-version: 3.4
name: dmq-node
version: 0.2.0.0
synopsis: Decentralised Message Queue Node
description:
  Decentralised Message Queue Node based on Cardano Diffusion
  network layer. Allows one to create their own overlay network and
  run their own mini-protocols.

homepage:
  https://github.com/IntersectMBO/ouroboros-network

license: Apache-2.0
license-file: LICENSE
author: Armando Santos, Marcin Szamotulski, Marcin Wójtowicz
maintainer: marcin.szamotulski@iohk.io
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

flag cddl
  description: Enable CDDL based tests of the CBOR encoding
  -- These tests need the cddl and the cbor-diag Ruby-package
  default: True

flag standardcrypto-tests
  description: Enable StandardCrypto tests
  -- these tests are flaky on GH Windows instances
  manual: True
  default: True

common extensions
  default-extensions:
    BangPatterns
    BlockArguments
    GADTs
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

common warnings
  ghc-options:
    -Wall
    -Wno-unticked-promoted-constructors
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wunused-packages

library
  import:
    warnings,
    extensions

  exposed-modules:
    DMQ.Configuration
    DMQ.Configuration.CLIOptions
    DMQ.Configuration.Topology
    DMQ.Diffusion.Applications
    DMQ.Diffusion.Arguments
    DMQ.Diffusion.NodeKernel
    DMQ.Diffusion.PeerSelection
    DMQ.Handlers.TopLevel
    DMQ.NodeToClient
    DMQ.NodeToClient.LocalMsgNotification
    DMQ.NodeToClient.LocalMsgSubmission
    DMQ.NodeToClient.Version
    DMQ.NodeToNode
    DMQ.NodeToNode.Version
    DMQ.Protocol.LocalMsgNotification.Client
    DMQ.Protocol.LocalMsgNotification.Codec
    DMQ.Protocol.LocalMsgNotification.Server
    DMQ.Protocol.LocalMsgNotification.Type
    DMQ.Protocol.LocalMsgSubmission.Client
    DMQ.Protocol.LocalMsgSubmission.Codec
    DMQ.Protocol.LocalMsgSubmission.Server
    DMQ.Protocol.LocalMsgSubmission.Type
    DMQ.Protocol.SigSubmission.Codec
    DMQ.Protocol.SigSubmission.Type
    DMQ.Tracer

  build-depends:
    acts,
    acts-generic,
    aeson >=2.1.1.0 && <3,
    aeson-pretty,
    base >=4.14 && <4.23,
    base16-bytestring,
    bytestring >=0.10 && <0.13,
    cardano-binary,
    cardano-crypto-class,
    cborg >=0.2.1 && <0.3,
    containers >=0.5 && <0.9,
    contra-tracer >=0.1 && <0.3,
    deepseq >=1.0 && <1.6,
    directory,
    dns >=1.0 && <4.3,
    filepath,
    generic-data,
    hashable >=1.0 && <1.6,
    io-classes:{io-classes, si-timers, strict-mvar, strict-stm} ^>=1.8.0.1,
    iproute ^>=1.7.15,
    kes-agent-crypto ^>=0.1,
    network ^>=3.2.7,
    network-mux ^>=0.9.1,
    optparse-applicative >=0.18 && <0.20,
    ouroboros-network:{ouroboros-network, api, framework, orphan-instances, protocols} ^>=0.23,
    random ^>=1.2,
    singletons,
    text >=1.2.4 && <2.2,
    time >=1.12 && <1.16,
    typed-protocols:{typed-protocols, cborg} ^>=1.1,

  hs-source-dirs: src
  default-language: Haskell2010

executable dmq-node
  import:
    warnings,
    extensions

  main-is: Main.hs
  other-modules: Paths_dmq_node
  autogen-modules: Paths_dmq_node
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    acts,
    aeson,
    base,
    cardano-git-rev,
    contra-tracer >=0.1 && <0.3,
    dmq-node,
    kes-agent-crypto,
    optparse-applicative,
    ouroboros-network:{ouroboros-network, api},
    random,
    text,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite dmq-tests
  import:
    warnings,
    extensions

  default-language: Haskell2010
  other-modules:
    DMQ.Protocol.LocalMsgNotification.Examples
    DMQ.Protocol.LocalMsgNotification.Test
    DMQ.Protocol.LocalMsgSubmission.Test
    DMQ.Protocol.SigSubmission.Test
    Test.DMQ.NodeToClient
    Test.DMQ.NodeToNode

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    base >=4.14 && <4.23,
    bytestring,
    cardano-crypto-class,
    cardano-crypto-tests,
    cborg,
    contra-tracer,
    dmq-node,
    io-classes,
    io-sim,
    kes-agent-crypto,
    ouroboros-network:{api, framework, protocols, protocols-tests-lib, tests-lib},
    quickcheck-instances,
    serialise,
    tasty,
    tasty-quickcheck,
    typed-protocols:{typed-protocols, codec-properties},
    with-utf8,

  ghc-options:
    -fno-ignore-asserts
    -threaded
    -rtsopts
    +RTS
    -T
    -RTS

  if flag(standardcrypto-tests)
    cpp-options: -DSTANDARDCRYPTO_TESTS

test-suite dmq-cddl
  import:
    warnings,
    extensions

  type: exitcode-stdio-1.0
  hs-source-dirs: cddl
  main-is: Main.hs

  if flag(cddl)
    buildable: True
  else
    buildable: False

  default-language: Haskell2010
  build-depends:
    base >=4.14 && <4.23,
    base16-bytestring,
    bytestring,
    cborg,
    directory,
    dmq-node,
    filepath,
    kes-agent-crypto,
    mtl,
    process-extras,
    quickcheck-instances,
    serialise,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,
    typed-protocols,

  ghc-options:
    -threaded
    -rtsopts
