cabal-version: 3.0
name: incremental-benchmark
version: 0.1.0.0
synopsis: Benchmarking incremental block decoding
description: Benchmarking incremental block decoding
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright: 2019-2024 Input Output Global Inc (IOG), 2023-2025 Intersect
author: Marcin Wójtowicz
maintainer: marcin.wojtowicz@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

flag asserts
  description: Enable assertions
  manual: False
  default: False

executable incremental-benchmark
  hs-source-dirs:
    src
  main-is: Main.hs
  build-depends:
    base >=4.14 && <4.23,
    bytestring >=0.10 && <0.13,
    cborg >=0.2.8 && <0.3,
    contra-tracer >=0.1 && <0.3,
    io-classes:{io-classes} ^>=1.8,
    network ^>=3.2.7,
    network-mux:{network-mux, tests-lib} ^>=0.10,
    ouroboros-consensus:{ouroboros-consensus, cardano},
    cardano-ledger-byron,
    ouroboros-network:{protocols},

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded
    -rtsopts
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
