name:                io-sim-classes
version:             0.1.0.0
synopsis:            Type classes for concurrency with STM, ST and timing
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              Alexander Vieth, Marcin Szamotulski, Duncan Coutts
maintainer:
category:            Control
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network
  subdir:   io-sim-classes

library
  hs-source-dirs:      src

  -- At this experiment/prototype stage everything is exposed.
  -- This has to be tidied up once the design becomes clear.
  exposed-modules:
                       Control.Monad.Class.MonadAsync
                       Control.Monad.Class.MonadFork
                       Control.Monad.Class.MonadSay
                       Control.Monad.Class.MonadST
                       Control.Monad.Class.MonadSTM
                       Control.Monad.Class.MonadThrow
                       Control.Monad.Class.MonadTime
                       Control.Monad.Class.MonadTimer
  default-language:    Haskell2010
  other-extensions:    CPP
                       TypeFamilies
                       TypeFamilyDependencies
                       MultiParamTypeClasses
                       FunctionalDependencies
                       FlexibleInstances
                       FlexibleContexts
                       ScopedTypeVariables
                       RankNTypes
  build-depends:       base  >=4.9 && <4.13,
                       async >=2.1,
                       bytestring,
                       mtl   >=2.2 && <2.3,
                       stm   >=2.4 && <2.6,
                       time  >=1.6 && <1.10
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -fno-ignore-asserts

