cabal-version: 2.4

name:                   io-sim
version:                0.2.0.0
synopsis:               A pure simlator for monadic concurrency with STM
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
copyright:              2019-2021 Input Output (Hong Kong) Ltd.
author:                 Duncan Coutts, Marcin Szamotulski, Alexander Vieth
maintainer:             operations@iohk.io
category:               Testing
build-type:             Simple

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network
  subdir:   io-sim

common base                         { build-depends: base                             >= 4.12       && < 4.15     }

common project-config
  default-language:     Haskell2010

library
  import:               base, project-config

  hs-source-dirs:      src
  exposed-modules:     Control.Monad.IOSim
  other-modules:       Control.Monad.IOSim.Internal
  default-language:    Haskell2010
  other-extensions:    BangPatterns,
                       CPP,
                       ExistentialQuantification,
                       FlexibleInstances,
                       GADTSyntax,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RankNTypes,
                       ScopedTypeVariables,
                       TypeFamilies
  build-depends:       io-sim-classes    >=0.2 && <0.3,
                       exceptions        >=0.10,
                       containers,
                       psqueues          >=0.2 && <0.3,
                       time              >=1.9.1 && <1.11,
                       quiet

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
  if flag(asserts)
     ghc-options:      -fno-ignore-asserts

test-suite test
  import:               base, project-config

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.IOSim
                       Test.STM
  default-language:    Haskell2010
  build-depends:       array,
                       containers,
                       io-sim,
                       io-sim-classes,
                       QuickCheck,
                       tasty,
                       tasty-quickcheck,
                       time               >= 1.9.1

  ghc-options:         -Wall
                       -fno-ignore-asserts
