name:                io-sim
version:             0.2.0.0
synopsis:            A pure simulator for monadic concurrency with STM
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2019-2020 Input Output (Hong Kong) Ltd.
author:              Duncan Coutts, Marcin Szamotulski, Alexander Vieth
maintainer:
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network
  subdir:   io-sim

library
  hs-source-dirs:      src
  exposed-modules:     Data.List.Trace,
                       Control.Monad.IOSim,
                       Control.Monad.IOSim.Types
  other-modules:       Control.Monad.IOSim.Internal,
                       Control.Monad.IOSim.InternalTypes,
                       Control.Monad.IOSim.STM,
                       Control.Monad.IOSimPOR.Internal,
                       Control.Monad.IOSimPOR.QuickCheckUtils,
                       Control.Monad.IOSimPOR.Timeout
  default-language:    Haskell2010
  other-extensions:    BangPatterns,
                       CPP,
                       ExistentialQuantification,
                       FlexibleInstances,
                       GADTSyntax,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RankNTypes,
                       ScopedTypeVariables,
                       TypeFamilies
  build-depends:       base              >=4.9 && <4.15,
                       io-classes        >=0.2 && <0.3,
                       exceptions        >=0.10,
                       containers,
                       parallel,
                       pretty-simple,
                       psqueues          >=0.2 && <0.3,
                       time              >=1.9.1 && <1.11,
                       quiet,
                       QuickCheck,
                       syb

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints

  if flag(asserts)
     ghc-options:      -fno-ignore-asserts

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.IOSim
                       Test.STM
                       Test.Control.Monad.IOSimPOR
  default-language:    Haskell2010
  build-depends:       base,
                       array,
                       containers,
                       io-classes,
                       io-sim,
                       parallel,
                       QuickCheck,
                       strict-stm,
                       tasty,
                       tasty-quickcheck,
                       time               >= 1.9.1

  ghc-options:         -Wall
                       -fno-ignore-asserts
