cabal-version:      3.0
name:               kes-agent-crypto
version:            0.1.0.0
synopsis: KES agent crypto library
-- description:
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE
author:             Tobias Dammers
maintainer:         operations@iohk.io
copyright:          2024-2025 Intersect
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common project-config
     ghc-options:
         -threaded
         -rtsopts=all
         -haddock
         -Wunused-imports
         -Wunused-packages

common base-dependencies
    build-depends: base >=4.14.0.0 && <4.22.0.0


library
    import: project-config
    import: base-dependencies
    exposed-modules:
                   Cardano.KESAgent.Protocols.StandardCrypto
                   Cardano.KESAgent.Protocols.VersionedProtocol
                   Cardano.KESAgent.KES.Evolution
                   Cardano.KESAgent.KES.Crypto
                   Cardano.KESAgent.KES.OCert
                   Cardano.KESAgent.KES.Bundle
                   Cardano.KESAgent.Util.HexBS
                   Cardano.KESAgent.Util.Pretty
                   Cardano.KESAgent.Util.RefCounting
    build-depends: aeson >=2.0
                 , bytestring >=0.11
                 , cardano-crypto-class
                 , cardano-binary
                   -- We need to pin this down to this exact version, because
                   -- there are two independent packages named contra-tracer:
                   -- one in CHaP (which is the one we will use), and one in
                   -- Hackage (which we cannot use due to other cardano
                   -- packages depending on the one in CHaP). Since the two
                   -- packages have the same name, we can only disambiguate
                   -- them by demanding a version that only one of them has.
                 , contra-tracer ==0.1.0.1
                 , io-classes
                 , nothunks
                 , quiet
                 , text
                 , time >=1.10
    hs-source-dirs: src
    default-language: Haskell2010
