cabal-version:      2.4
name:               kes-agent
version:            0.1.0.0

-- synopsis:
-- description:

-- bug-reports:

-- license:
author:             Tobias Dammers
maintainer:         tobias@well-typed.com

-- copyright:
-- category:
-- extra-source-files:

common project-config
    ghc-options:
        -with-rtsopts -threaded

library
    import: project-config
    exposed-modules: Cardano.KESAgent.Protocol
                   , Cardano.KESAgent.OCert
                   , Cardano.KESAgent.Driver
                   , Cardano.KESAgent.Evolution
                   , Cardano.KESAgent.Peers
                   , Cardano.KESAgent.Agent
                   , Cardano.KESAgent.ServiceClient
                   , Cardano.KESAgent.ControlClient
                   , Cardano.KESAgent.RetrySocket
                   , Cardano.KESAgent.RefCounting
                   , Cardano.KESAgent.DirectBearer
                   , Cardano.KESAgent.Classes

    -- other-modules:

    -- other-extensions:
    build-depends: base ^>=4.14.0.0
                 , async
                 , binary
                 , bytestring >=0.11
                 , cardano-crypto-class
                 , cardano-binary
                   -- We need to pin this down to this exact version, because
                   -- there are two independent packages named contra-tracer:
                   -- one in CHaP (which is the one we will use), and one in
                   -- Hackage (which we cannot use due to other cardano
                   -- packages depending on the one in CHaP). Since the two
                   -- packages have the same name, we can only disambiguate
                   -- them by demanding a version that only one of them has.
                 , contra-tracer ==0.1.0.1
                 , time >=1.10
                 , typed-protocols
                 , network
                 , network-mux
                 , socket >= 0.8.3 && <0.9
                 , socket-unix >=0.2.0.0
                 , nothunks
                 , quiet
                 , ouroboros-network-framework
                 , io-classes
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite kes-agent-tests
    import: project-config
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: Main.hs
    other-modules: Cardano.KESAgent.Tests.Simulation
                 , Cardano.KESAgent.Tests.RefCounting
    build-depends: base ^>=4.14.0.0
                 , kes-agent
                 , async
                 , bytestring
                 , cardano-binary
                 , cardano-crypto-class
                 , cardano-crypto-tests
                 , contra-tracer
                 , QuickCheck
                 , socket-unix >=0.2.0.0
                 , tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , text >=1.2.5
                 , time >=1.10
                 , ouroboros-network-framework
                 , io-classes
                 , ghc-prim
                 , Win32-network
                 , network
