cabal-version:      2.4
name:               kes-agent
version:            0.1.0.0

-- synopsis:
-- description:

-- bug-reports:

-- license:
author:             Tobias Dammers
maintainer:         tobias@well-typed.com

-- copyright:
-- category:
-- extra-source-files:

data-files: fixtures/*.vkey
          , fixtures/*.skey
          , fixtures/opcert.cert
          , fixtures/opcert.counter
          , fixtures/mainnet-shelley-genesis.json

common project-config
     ghc-options:
         -threaded -rtsopts=all

common base-dependencies
    build-depends: base ^>=4.14.0.0

library
    import: project-config
    import: base-dependencies
    exposed-modules:
                   Cardano.KESAgent.KES.Classes
                   Cardano.KESAgent.KES.Evolution
                   Cardano.KESAgent.KES.Crypto
                   Cardano.KESAgent.KES.OCert
                   Cardano.KESAgent.KES.Bundle
                   Cardano.KESAgent.Processes.Agent
                   Cardano.KESAgent.Processes.ControlClient
                   Cardano.KESAgent.Processes.ServiceClient
                   Cardano.KESAgent.Serialization.CBOR
                   Cardano.KESAgent.Serialization.TextEnvelope
                   Cardano.KESAgent.Serialization.RawUtil
                   Cardano.KESAgent.Protocols.Service.Driver
                   Cardano.KESAgent.Protocols.Service.Peers
                   Cardano.KESAgent.Protocols.Service.Protocol
                   Cardano.KESAgent.Protocols.Control.Driver
                   Cardano.KESAgent.Protocols.Control.Peers
                   Cardano.KESAgent.Protocols.Control.Protocol
                   Cardano.KESAgent.Protocols.VersionedProtocol
                   Cardano.KESAgent.Protocols.RecvResult
                   Cardano.KESAgent.Protocols.StandardCrypto
                   Cardano.KESAgent.Util.Pretty
                   Cardano.KESAgent.Util.RefCounting
                   Cardano.KESAgent.Util.RetrySocket
    build-depends: async
                 , aeson >=2.0
                 , base16-bytestring
                 , binary
                 , bytestring >=0.11
                 , cardano-crypto-class
                 , cardano-binary
                   -- We need to pin this down to this exact version, because
                   -- there are two independent packages named contra-tracer:
                   -- one in CHaP (which is the one we will use), and one in
                   -- Hackage (which we cannot use due to other cardano
                   -- packages depending on the one in CHaP). Since the two
                   -- packages have the same name, we can only disambiguate
                   -- them by demanding a version that only one of them has.
                 , contra-tracer ==0.1.0.1
                 , containers >=0.6.5.1 && <0.7
                 , extra >=1.7.12 && <1.8
                 , formatting
                 , ghc-prim
                 , io-classes
                 , mtl
                 , network
                 , network-mux
                 , nothunks
                 , ouroboros-network-framework
                 , quiet
                 , socket >= 0.8.3 && <0.9
                 , socket-unix >=0.2.0.0
                 , stm>=2.5 && <2.6
                 , text
                 , time >=1.10
                 , typed-protocols
    hs-source-dirs:   src
    default-language: Haskell2010

executable kes-agent
    import: project-config
    import: base-dependencies
    default-language: Haskell2010
    hs-source-dirs: cli
    main-is: AgentMain.hs
    build-depends: kes-agent
                 , bytestring
                 , cardano-crypto-class
                 , contra-tracer
                 , containers
                 , hdaemonize
                 , hsyslog
                 , io-classes
                 , network
                 , ouroboros-network-framework
                 , optparse-applicative
                 , text
                 , time
                 , typed-protocols
                 , unix
                 , Win32-network

executable kes-service-client-demo
    import: project-config
    import: base-dependencies
    default-language: Haskell2010
    hs-source-dirs: cli
    main-is: ServiceDemoMain.hs
    build-depends: kes-agent
                 , bytestring
                 , cardano-crypto-class
                 , contra-tracer
                 , hsyslog
                 , io-classes
                 , network
                 , ouroboros-network-framework
                 , optparse-applicative
                 , text
                 , time
                 , typed-protocols
                 , Win32-network

executable kes-agent-control
    import: project-config
    import: base-dependencies
    default-language: Haskell2010
    hs-source-dirs: cli
    main-is: ControlMain.hs
    build-depends: kes-agent
                 , aeson >=2.0
                 , bytestring
                 , cardano-crypto-class
                 , contra-tracer
                 , extra >=1.7.12 && <1.8
                 , hsyslog
                 , io-classes
                 , network
                 , ouroboros-network-framework
                 , optparse-applicative
                 , text
                 , time
                 , typed-protocols
                 , Win32-network


test-suite kes-agent-tests
    import: project-config
    import: base-dependencies
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: Main.hs
    other-modules: Cardano.KESAgent.Tests.Simulation
                 , Cardano.KESAgent.Tests.RefCounting
                 , Cardano.KESAgent.Tests.OCert
                 , Cardano.KESAgent.Tests.Serialization
                 , Cardano.KESAgent.Tests.EndToEnd
                 , Paths_kes_agent
    build-tool-depends: kes-agent:kes-agent
                      , kes-agent:kes-agent-control
                      , kes-agent:kes-service-client-demo
    build-depends: kes-agent
                 , aeson >=2.0
                 , async
                 , bytestring
                 , cardano-binary
                 , cardano-crypto-class
                 , cardano-crypto-tests
                 , contra-tracer
                 , containers
                 , directory >=1.3.6.1 && <1.4.0.0
                 , filepath >= 1.4.2 && <1.5
                 , ghc-prim
                 , io-classes
                 , io-sim
                 , network
                 , network-mux
                 , ouroboros-network-framework
                 , ouroboros-network-testing
                 , primitive >=0.7.4 && <0.8
                 , process
                 , QuickCheck
                 , random >=1.2.1 && <1.3
                 , socket-unix >=0.2.0.0 && <0.3.0.0
                 , tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , temporary >=1.3 && <1.4
                 , text >=1.2.5
                 , time >=1.10
                 , Win32-network
